fix overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
 */
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
 }
 /*
   Typographic tweaks!
@@ -27,6 +27,8 @@ body {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
+  width: 100%;
 }
 /*
   6. Improve media defaults
